--- a/src/components/organisms/Header/header.module.scss
+++ b/src/components/organisms/Header/header.module.scss
@@ -1,8 +1,9 @@
 .header {
+    width: var(--app-width);
+    height: 200px;
     background-size: 100% 100%;
     background-position: center;
     background-image: url('/images/mountain.png');
-    padding: 44.86px 193px 81px 185px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,25 +12,7 @@
 .todoHeaderText {
     color: var(--white);
     font-weight: bold;
-    display: flex;
-}
-
-.inputTodo {
-    margin-left: 2px;
-}
-
-.todoFrame{
-    position: absolute;
-    margin-top: 100px;
-    border-radius: 5px;
-
-    & .information{
-        margin-top: 30px;
-        font-size: small;
-    }
-}
-
-.todoList{
-    background-color: var(--white);
-    border-radius: 5px;
+    position: fixed;
+    top: 65px;
+    left: 535px;
 }
