--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,5 +1,32 @@
 .home{
     background-color: #f7f1f1;
     height: 60vh;
-    width: 745px;
+    width: var(--app-width);
+    display: flex;
+    justify-content: center;
+
+    & .homePageFrame{
+        position: fixed;
+        top: 110px;
+    }
+}
+
+.inputTodo {
+    margin-left: 2px;
+}
+
+.todoFrame{
+    position: absolute;
+    margin-top: 20px;
+    border-radius: 5px;
+
+    & .information{
+        margin-top: 30px;
+        font-size: small;
+    }
+}
+
+.todoList{
+    background-color: var(--white);
+    border-radius: 5px;
 }
